--- a/_layouts/slide.html
+++ b/_layouts/slide.html
@@ -79,7 +79,7 @@
         {% endif %}
         // Optional reveal.js plugins
       math: {
-        mathjax: 'http://cdn.mathjax.org/mathjax/latest/MathJax.js',
+        mathjax: 'https://cdn.mathjax.org/mathjax/latest/MathJax.js',
         config: 'TeX-AMS-MML_HTMLorMML'  // See http://docs.mathjax.org/en/latest/config-files.html
       },
 
